ui:fix project image overflow problem

--- a/style.css
+++ b/style.css
@@ -344,6 +344,12 @@ section h2::after {
     overflow: hidden;
 }
 
+.project-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .project-image::before {
     content: '';
     position: absolute;
